# internal/handlers/http/parse.go
@@ -8,22 +8,31 @@ import (
 	"strings"
 )
 
+type ParseRequest struct {
+	JsonSchema string `json:"data"`
+}
+
 // Parse
 // @Summary Parse swagger to doc and python
 // @Tags service
 // @Description Parse swagger to doc and python
 // @ModuleID 3
-// @Accept text/plain
+// @Accept application/json
 // @Param provider query string true "Provider name"
-// @Param data body string true "Input text data"
+// @Param data body http.ParseRequest true "Request"
 // @Produce text/plain
 // @Success 200 {string} string "Successfully generated python"
 // @Failure 400,401,500,503 {string} string "Error occurred"
 // @Router /parse [post]
 func (h *Handler) Parse(c *fiber.Ctx) error {
+	req := ParseRequest{}
+	err := c.BodyParser(&req)
+	if err != nil {
+		return err
+	}
 
 	swagParser := parser.NewSwaggerParser()
-	doc := swagParser.Parse(c.BodyRaw())
+	doc := swagParser.Parse([]byte(req.JsonSchema))
 	markdown := parser.DocumentToMarkdown(doc)
 
 	resp, err := http.DefaultClient.Post("http://localhost:8000/api/generate?provider="+c.Query("provider"), "text/plain", strings.NewReader(markdown))
